--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>WKC Dog Show</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <script src="./src/index.js"></script>
+    <!-- <script src="./src/index.js"></script> -->
     <link rel="stylesheet" href="./assets/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans" rel="stylesheet" />
   </head>
@@ -27,16 +27,18 @@
         <table class='margin' border="1">
           <thead class='blue'>
             <tr class='padding'>
-              <th class='padding center'>Name</th>
-              <th class='padding center'>Breed</th>
-              <th class='padding center'>Sex</th>
-              <th class='padding center'>Edit Dog</th>
+              <th class='padding center1'>Name</th>
+              <th class='padding center2'>Breed</th>
+              <th class='padding center3'>Sex</th>
+              <th class='padding center4'>Edit Dog</th>
             </tr>
           </thead>
           <tbody id="table-body">
+            
           </tbody>
         </table>
       </div>
     </div>
+    <script src="./src/index.js"></script>
   </body>
 </html>
